<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:backgroundTint="@color/purple_200"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/elige"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:text="@string/azul"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:text="@string/rojo"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:text="@string/amarillo"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:backgroundTint="@color/teal_200"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elige_una_opci_n"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:background="@color/teal_700"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/_1"
                android:textSize="20sp"
                tools:ignore="NotSibling" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/_1"
                android:textSize="20sp"
                tools:ignore="NotSibling" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:backgroundTint="@color/purple_200"
            android:text="Switch"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>